# locadora

./: pyproject.toml
locadora/: clientes.pkl  clientes.py  funcionario.py  funcionarios.pkl  janelas.py  livros.pkl  livros.py  main.py
