[tool.poetry]
name = "locadora"
version = "0.1.0"
description = "projeto para a segunda avaliação da disciplina LABORATÓRIO DE PROGRAMAÇÃO 1, 2021.2, da UFRPE"
authors = ["tuliofalcao <falcao.tulio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.60.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
